--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,10 @@ body {
     color: gold;
 }
 
+strong{
+    font-weight: bold;
+}
+
 button, input[type="text"] {
     padding: 10px;
 }
@@ -46,7 +50,7 @@ button:hover {
 
 .wrapper {
     background-color: #fff;
-    max-width: 1540px;
+    max-width: 1620px;
     margin: 40px auto;
     padding: 40px;
     position: relative;
@@ -127,4 +131,10 @@ input[type=submit], input[type=reset]{
     font-size: 50px;
     text-align: center;
     line-height: 1em;
+}
+
+@media(max-width: 1620px){
+    .wrapper{
+        width: 92%
+    }
 }
