--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,9 @@
 
 body {
     background-color: #f9f8f7;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -38,7 +41,7 @@ strong{
 
 
 .wrapper {
-    background-color: #fff;
+    background-color: rgba(255,255,255, 0.96);
     max-width: 1620px;
     margin: 40px auto;
     padding: 40px;
