--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,13 @@ body {
 strong{
     font-weight: bold;
 }
+
+label{
+    color: #fff;
+    display: block;
+    margin-bottom: 10px;
+}
+
 input[type="text"]{
     background-color: rgba(255,255,255, 0.95);
     display: block;
@@ -59,6 +66,10 @@ input[type="text"]{
 button, input[type="text"] {
     border: 0;
     padding: 10px;
+}
+
+button{
+    padding: 17px 10px;
 }
 
 button:hover {
@@ -90,16 +101,68 @@ p{
     margin: 0 0 10px 0;
 }
 
+a{
+    color: #000;
+    text-decoration: none;
+}
+
+header{
+    color: #fff;
+    margin-bottom: 40px;
+    padding-top: 20px;
+    text-align: center;
+}
+
 main{
+    display: table;
+    height: 78%;
     margin: 0 auto;
     width: 1024px;
+
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.welcomeWrapper{
+    display: table-cell;
+    vertical-align: middle;
+    height: 217px; 
+
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.welcomeText{
+    margin-bottom: 30px;
+    padding: 0 90px;
+}
+
+.welcomeText p{
+    color: #fff;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 40px;
+    font-weight: 300;
+    text-align: center;
+}
+
+.welcomeText p span{
+    background-color: #000;
+    display: inline-block;
+    line-height: 1em;
+    padding: 5px;
 }
 
 .jobsForm{
     margin: 0 auto 20px;
 }
 
-.wrapper {
+.resultsWrapper {
     background-color: rgba(255,255,255, 0.95);
     margin-bottom: 40px;
     padding: 40px;
@@ -119,6 +182,8 @@ main{
     background-color: #fff;
     border: 1px solid #ddd;
     box-shadow: 3px 3px 1px 0px rgba(0,0,0,0.1);
+    color: #000;
+    font-family: 'Roboto Condensed', sans-serif;
     margin-bottom: 20px;
     padding: 10px;
     -webkit-box-shadow: 3px 3px 1px 0px rgba(0,0,0,0.1);
@@ -136,6 +201,14 @@ main{
     box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.05);
     -webkit-box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.05);
     -moz-box-shadow: 5px 5px 3px 0px rgba(0,0,0,0.05);
+}
+
+.jobPost .footnote{
+    margin-bottom: 0;
+}
+
+.jobPost strong{
+    font-weight: 600;
 }
 
 .cityStateInfoBlock{
