--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ input[type="text"]{
     display: block;
     font-size: 28px;
     margin-right: 5px;
-    max-width: 300px;
+    max-width: 305px;
 }
 
 
@@ -70,11 +70,21 @@ button, input[type="text"] {
 }
 
 button{
-    padding: 17px 10px;
+    padding: 10px 20px;
+    background-color: transparent;
+    color: #fff;
+    font-size: 32px;
+
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
 
 button:hover {
-  cursor: pointer;
+    background-color: #000;
+    cursor: pointer;
 }
 
 h1{
