--- a/css/main.css
+++ b/css/main.css
@@ -57,15 +57,18 @@ label{
 
 input[type="text"]{
     background-color: rgba(255,255,255, 0.95);
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.35);
     display: block;
     font-size: 28px;
+    height: 52px;
     margin-right: 5px;
-    max-width: 305px;
+    width: 460px;
 }
 
 
 button, input[type="text"] {
     border: 0;
+    outline: 0;
     padding: 10px;
 }
 
@@ -171,7 +174,20 @@ main{
 
 .jobsForm{
     margin: 0 auto 20px;
-    text-align: center;
+}
+
+.tp-autocomplete{
+    float: left;
+    margin-right: 5px;
+    max-width: 460px;
+}
+
+.tp-autocomplete.spinner{
+    width: 460px;
+}
+
+.tp-ac__list{
+    top: 52px;
 }
 
 .resultsWrapper {
@@ -184,12 +200,12 @@ main{
 
 .loadingIcon {
     color: rebeccapurple;
-    display: none;
+    display: block;
     left: 0;
     margin: 0 auto;
-    position: fixed;
+    position: absolute;
     right: 0;
-    top: 50%;
+    top: 15%;
 }
 
 .iconColor{
@@ -197,6 +213,7 @@ main{
 }
 
 .jobsBlock, .cityStateInfoBlock{
+    position: relative;
     width: 50%;
 }
 
@@ -346,13 +363,23 @@ main{
     opacity: 1;
 }
 
-@media(max-width: 1000px){
+@media(max-width: 1100px){
     .wrapper, main{
-        width: 92%;
+        width: 960px;
+    }
+
+    .welcomeText{
+        padding: 0 5%;
     }
 
     input[type="text"]{
         width: 30%;
+    }
+}
+
+@media(max-width: 1024px){
+    .wrapper, main{
+        width: 92%;
     }
 }
 
